@@ -7,12 +7,7 @@ import net.canarymod.api.entity.vehicle.Minecart;
 import net.canarymod.api.entity.vehicle.Vehicle;
 import net.canarymod.api.world.position.Vector3D;
 import net.canarymod.config.Configuration;
-import net.canarymod.hook.entity.MinecartActivateHook;
-import net.canarymod.hook.entity.VehicleCollisionHook;
-import net.canarymod.hook.entity.VehicleDamageHook;
-import net.canarymod.hook.entity.VehicleDestroyHook;
-import net.canarymod.hook.entity.VehicleEnterHook;
-import net.canarymod.hook.entity.VehicleMoveHook;
+import net.canarymod.hook.entity.*;
 import net.minecraft.block.Block;
 import net.minecraft.block.BlockRailBase;
 import net.minecraft.block.material.Material;
@@ -35,11 +30,13 @@ import net.minecraft.world.WorldServer;
 
 import java.util.List;
 
+//import net.minecraft.server.MinecraftServer;
+
 public abstract class EntityMinecart extends Entity {
 
     public boolean a; // CanaryMod: private -> public
     private String b;
-    private static final int[][][] c = new int[][][]{ { { 0, 0, -1 }, { 0, 0, 1 } }, { { -1, 0, 0 }, { 1, 0, 0 } }, { { -1, -1, 0 }, { 1, 0, 0 } }, { { -1, 0, 0 }, { 1, -1, 0 } }, { { 0, 0, -1 }, { 0, -1, 1 } }, { { 0, -1, -1 }, { 0, 0, 1 } }, { { 0, 0, 1 }, { 1, 0, 0 } }, { { 0, 0, 1 }, { -1, 0, 0 } }, { { 0, 0, -1 }, { -1, 0, 0 } }, { { 0, 0, -1 }, { 1, 0, 0 } } };
+    private static final int[][][] c = new int[][][]{{{0, 0, -1}, {0, 0, 1}}, {{-1, 0, 0}, {1, 0, 0}}, {{-1, -1, 0}, {1, 0, 0}}, {{-1, 0, 0}, {1, -1, 0}}, {{0, 0, -1}, {0, -1, 1}}, {{0, -1, -1}, {0, 0, 1}}, {{0, 0, 1}, {1, 0, 0}}, {{0, 0, 1}, {-1, 0, 0}}, {{0, 0, -1}, {-1, 0, 0}}, {{0, 0, -1}, {1, 0, 0}}};
     private int d;
     private double e;
     private double f;
@@ -49,9 +46,9 @@ public abstract class EntityMinecart extends Entity {
 
     public EntityMinecart(World world) {
         super(world);
-        this.l = true;
+        this.k = true;
         this.a(0.98F, 0.7F);
-        this.M = this.O / 2.0F;
+        this.L = this.N / 2.0F;
     }
 
     public static EntityMinecart a(World world, double d0, double d1, double d2, int i0) {
@@ -83,16 +80,16 @@ public abstract class EntityMinecart extends Entity {
     }
 
     protected void c() {
-        this.ag.a(17, new Integer(0));
-        this.ag.a(18, new Integer(1));
-        this.ag.a(19, new Float(0.0F));
-        this.ag.a(20, new Integer(0));
-        this.ag.a(21, new Integer(6));
-        this.ag.a(22, Byte.valueOf((byte) 0));
+        this.af.a(17, new Integer(0));
+        this.af.a(18, new Integer(1));
+        this.af.a(19, new Float(0.0F));
+        this.af.a(20, new Integer(0));
+        this.af.a(21, new Integer(6));
+        this.af.a(22, Byte.valueOf((byte) 0));
     }
 
-    public AxisAlignedBB g(Entity entity) {
-        return entity.S() ? entity.D : null;
+    public AxisAlignedBB h(Entity entity) {
+        return entity.S() ? entity.C : null;
     }
 
     public AxisAlignedBB J() {
@@ -106,24 +103,23 @@ public abstract class EntityMinecart extends Entity {
     public EntityMinecart(World world, double d0, double d1, double d2) {
         this(world);
         this.b(d0, d1, d2);
+        this.v = 0.0D;
         this.w = 0.0D;
         this.x = 0.0D;
-        this.y = 0.0D;
-        this.q = d0;
-        this.r = d1;
-        this.s = d2;
+        this.p = d0;
+        this.q = d1;
+        this.r = d2;
     }
 
     public double ae() {
-        return (double) this.O * 0.0D - 0.30000001192092896D;
+        return (double) this.N * 0.0D - 0.30000001192092896D;
     }
 
     public boolean a(DamageSource damagesource, float f0) {
-        if (!this.p.E && !this.L) {
+        if (!this.o.E && !this.K) {
             if (this.aw()) {
                 return false;
-            }
-            else {
+            } else {
                 // CanaryMod: VehicleDamage
                 net.canarymod.api.entity.Entity attk = null;
 
@@ -141,25 +137,23 @@ public abstract class EntityMinecart extends Entity {
                 this.c(10);
                 this.Q();
                 this.a(this.j() + f0 * 10.0F);
-                boolean flag0 = damagesource.j() instanceof EntityPlayer && ((EntityPlayer) damagesource.j()).bF.d;
+                boolean flag0 = damagesource.j() instanceof EntityPlayer && ((EntityPlayer) damagesource.j()).bE.d;
 
                 if (flag0 || this.j() > 40.0F) {
-                    if (this.m != null) {
-                        this.m.a((Entity) this);
+                    if (this.l != null) {
+                        this.l.a((Entity) this);
                     }
 
                     if (flag0 && !this.k_()) {
                         this.B();
-                    }
-                    else {
+                    } else {
                         this.a(damagesource);
                     }
                 }
 
                 return true;
             }
-        }
-        else {
+        } else {
             return true;
         }
     }
@@ -179,7 +173,7 @@ public abstract class EntityMinecart extends Entity {
     }
 
     public boolean R() {
-        return !this.L;
+        return !this.K;
     }
 
     public void B() {
@@ -195,95 +189,91 @@ public abstract class EntityMinecart extends Entity {
             this.a(this.j() - 1.0F);
         }
 
-        if (this.u < -64.0D) {
+        if (this.t < -64.0D) {
             this.G();
         }
 
         int i0;
 
-        if (!this.p.E && this.p instanceof WorldServer) {
-            this.p.C.a("portal");
+        if (!this.o.E && this.o instanceof WorldServer) {
+            this.o.C.a("portal");
             //MinecraftServer minecraftserver = ((WorldServer) this.p).p();
 
             i0 = this.D();
-            if (this.ao) {
+            if (this.an) {
                 // CanaryMod moved allow-nether to per-world config
                 if (Configuration.getWorldConfig(getCanaryWorld().getFqName()).isNetherAllowed()) {
-                    if (this.n == null && this.ap++ >= i0) {
-                        this.ap = i0;
-                        this.an = this.ai();
+                    if (this.m == null && this.ao++ >= i0) {
+                        this.ao = i0;
+                        this.am = this.ai();
                         byte b0;
 
-                        if (this.p.t.i == -1) {
+                        if (this.o.t.i == -1) {
                             b0 = 0;
-                        }
-                        else {
+                        } else {
                             b0 = -1;
                         }
 
                         this.b(b0);
                     }
 
-                    this.ao = false;
+                    this.an = false;
                 }
-            }
-            else {
-                if (this.ap > 0) {
-                    this.ap -= 4;
+            } else {
+                if (this.ao > 0) {
+                    this.ao -= 4;
                 }
 
-                if (this.ap < 0) {
-                    this.ap = 0;
+                if (this.ao < 0) {
+                    this.ao = 0;
                 }
             }
 
-            if (this.an > 0) {
-                --this.an;
+            if (this.am > 0) {
+                --this.am;
             }
 
-            this.p.C.b();
+            this.o.C.b();
         }
 
-        if (this.p.E) {
+        if (this.o.E) {
             if (this.d > 0) {
-                double d0 = this.t + (this.e - this.t) / (double) this.d;
-                double d1 = this.u + (this.f - this.u) / (double) this.d;
-                double d2 = this.v + (this.g - this.v) / (double) this.d;
-                double d3 = MathHelper.g(this.h - (double) this.z);
+                double d0 = this.s + (this.e - this.s) / (double) this.d;
+                double d1 = this.t + (this.f - this.t) / (double) this.d;
+                double d2 = this.u + (this.g - this.u) / (double) this.d;
+                double d3 = MathHelper.g(this.h - (double) this.y);
 
-                this.z = (float) ((double) this.z + d3 / (double) this.d);
-                this.A = (float) ((double) this.A + (this.i - (double) this.A) / (double) this.d);
+                this.y = (float) ((double) this.y + d3 / (double) this.d);
+                this.z = (float) ((double) this.z + (this.i - (double) this.z) / (double) this.d);
                 --this.d;
                 this.b(d0, d1, d2);
-                this.b(this.z, this.A);
+                this.b(this.y, this.z);
+            } else {
+                this.b(this.s, this.t, this.u);
+                this.b(this.y, this.z);
             }
-            else {
-                this.b(this.t, this.u, this.v);
-                this.b(this.z, this.A);
-            }
-        }
-        else {
-            float prevRot = this.B, prevPit = this.C;
-            double ppX = this.q, ppY = this.r, ppZ = this.s;
+        } else {
+            float prevRot = this.y, prevPit = this.z;
+            double ppX = this.p, ppY = this.q, ppZ = this.r;
+            this.p = this.s;
             this.q = this.t;
             this.r = this.u;
-            this.s = this.v;
-            this.x -= 0.03999999910593033D;
-            int i1 = MathHelper.c(this.t);
+            this.w -= 0.03999999910593033D;
+            int i1 = MathHelper.c(this.s);
 
-            i0 = MathHelper.c(this.u);
-            int i2 = MathHelper.c(this.v);
+            i0 = MathHelper.c(this.t);
+            int i2 = MathHelper.c(this.u);
 
-            if (BlockRailBase.b_(this.p, i1, i0 - 1, i2)) {
+            if (BlockRailBase.b_(this.o, i1, i0 - 1, i2)) {
                 --i0;
             }
 
             double d4 = 0.4D;
             double d5 = 0.0078125D;
-            Block block = this.p.a(i1, i0, i2);
+            Block block = this.o.a(i1, i0, i2);
 
             if (BlockRailBase.a(block)) {
-                int i3 = this.p.e(i1, i0, i2);
+                int i3 = this.o.e(i1, i0, i2);
 
                 this.a(i1, i0, i2, d4, d5, block, i3);
                 if (block == Blocks.cc) {
@@ -296,68 +286,67 @@ public abstract class EntityMinecart extends Entity {
                     }
                     //
                 }
-            }
-            else {
+            } else {
                 this.b(d4);
             }
 
             this.I();
-            this.A = 0.0F;
-            double d6 = this.q - this.t;
-            double d7 = this.s - this.v;
+            this.z = 0.0F;
+            double d6 = this.p - this.s;
+            double d7 = this.r - this.u;
 
             if (d6 * d6 + d7 * d7 > 0.001D) {
-                this.z = (float) (Math.atan2(d7, d6) * 180.0D / 3.141592653589793D);
+                this.y = (float) (Math.atan2(d7, d6) * 180.0D / 3.141592653589793D);
                 if (this.a) {
-                    this.z += 180.0F;
+                    this.y += 180.0F;
                 }
             }
 
-            double d8 = (double) MathHelper.g(this.z - this.B);
+            double d8 = (double) MathHelper.g(this.y - this.A);
 
             if (d8 < -170.0D || d8 >= 170.0D) {
-                this.z += 180.0F;
+                this.y += 180.0F;
                 this.a = !this.a;
             }
 
-            this.b(this.z, this.A);
+            this.b(this.y, this.z);
             // CanaryMod: VehicleMove
-            Vector3D from = new Vector3D(this.q, this.r, this.s);
-            Vector3D to = new Vector3D(this.t, this.u, this.v);
-            if (hasMovedOneBlockOrMore()) {
+            Vector3D from = new Vector3D(this.p, this.q, this.r);
+            Vector3D to = new Vector3D(this.s, this.t, this.u);
+            if (Vector3D.getDistance(from, to) > 1.0F) {
                 VehicleMoveHook vmh = (VehicleMoveHook) new VehicleMoveHook((Vehicle) this.entity, from, to).call();
                 if (vmh.isCanceled()) {
+                    this.v = 0.0D;
                     this.w = 0.0D;
                     this.x = 0.0D;
-                    this.y = 0.0D;
-                    this.b(this.q, this.r, this.s, this.B, this.C);
-                    this.q = ppX;
-                    this.r = ppY;
-                    this.s = ppZ;
-                    this.B = prevRot;
-                    this.C = prevRot;
+                    this.b(this.p, this.q, this.r, this.y, this.z);
+                    this.p = ppX;
+                    this.q = ppY;
+                    this.r = ppZ;
+                    this.y = prevRot;
+                    this.z = prevRot;
                     this.ac(); // Update rider
                 }
             }
             //
-            List list = this.p.b((Entity) this, this.D.b(0.20000000298023224D, 0.0D, 0.20000000298023224D));
+            List list = this.o.b((Entity) this, this.C.b(0.20000000298023224D, 0.0D, 0.20000000298023224D));
 
             if (list != null && !list.isEmpty()) {
                 for (int i4 = 0; i4 < list.size(); ++i4) {
                     Entity entity = (Entity) list.get(i4);
 
-                    if (entity != this.m && entity.S() && entity instanceof EntityMinecart) {
-                        entity.f((Entity) this);
+                    if (entity != this.l && entity.S() && entity instanceof EntityMinecart) {
+                        entity.g(this);
                     }
                 }
             }
 
-            if (this.m != null && this.m.L) {
-                if (this.m.n == this) {
-                    this.m.n = null;
+            if (this.l != null && this.l.K) {
+                if (this.l.m == this) {
+                    this.l.m = null;
                 }
 
-                this.m = null;
+                this.l = null;
             }
 
         }
@@ -367,41 +356,41 @@ public abstract class EntityMinecart extends Entity {
     }
 
     protected void b(double d0) {
-        if (this.w < -d0) {
-            this.w = -d0;
+        if (this.v < -d0) {
+            this.v = -d0;
         }
 
-        if (this.w > d0) {
-            this.w = d0;
+        if (this.v > d0) {
+            this.v = d0;
         }
 
-        if (this.y < -d0) {
-            this.y = -d0;
+        if (this.x < -d0) {
+            this.x = -d0;
         }
 
-        if (this.y > d0) {
-            this.y = d0;
+        if (this.x > d0) {
+            this.x = d0;
         }
 
-        if (this.E) {
+        if (this.D) {
+            this.v *= 0.5D;
             this.w *= 0.5D;
             this.x *= 0.5D;
-            this.y *= 0.5D;
         }
 
-        this.d(this.w, this.x, this.y);
-        if (!this.E) {
+        this.d(this.v, this.w, this.x);
+        if (!this.D) {
+            this.v *= 0.949999988079071D;
             this.w *= 0.949999988079071D;
             this.x *= 0.949999988079071D;
-            this.y *= 0.949999988079071D;
         }
     }
 
     protected void a(int i0, int i1, int i2, double d0, double d1, Block block, int i3) {
-        this.S = 0.0F;
-        Vec3 vec3 = this.a(this.t, this.u, this.v);
+        this.R = 0.0F;
+        Vec3 vec3 = this.a(this.s, this.t, this.u);
 
-        this.u = (double) i1;
+        this.t = (double) i1;
         boolean flag0 = false;
         boolean flag1 = false;
 
@@ -415,74 +404,73 @@ public abstract class EntityMinecart extends Entity {
         }
 
         if (i3 >= 2 && i3 <= 5) {
-            this.u = (double) (i1 + 1);
+            this.t = (double) (i1 + 1);
         }
 
         if (i3 == 2) {
-            this.w -= d1;
+            this.v -= d1;
         }
 
         if (i3 == 3) {
-            this.w += d1;
+            this.v += d1;
         }
 
         if (i3 == 4) {
-            this.y += d1;
+            this.x += d1;
         }
 
         if (i3 == 5) {
-            this.y -= d1;
+            this.x -= d1;
         }
 
         int[][] aint = c[i3];
         double d2 = (double) (aint[1][0] - aint[0][0]);
         double d3 = (double) (aint[1][2] - aint[0][2]);
         double d4 = Math.sqrt(d2 * d2 + d3 * d3);
-        double d5 = this.w * d2 + this.y * d3;
+        double d5 = this.v * d2 + this.x * d3;
 
         if (d5 < 0.0D) {
             d2 = -d2;
             d3 = -d3;
         }
 
-        double d6 = Math.sqrt(this.w * this.w + this.y * this.y);
+        double d6 = Math.sqrt(this.v * this.v + this.x * this.x);
 
         if (d6 > 2.0D) {
             d6 = 2.0D;
         }
 
-        this.w = d6 * d2 / d4;
-        this.y = d6 * d3 / d4;
+        this.v = d6 * d2 / d4;
+        this.x = d6 * d3 / d4;
         double d7;
         double d8;
         double d9;
         double d10;
 
-        if (this.m != null && this.m instanceof EntityLivingBase) {
-            d7 = (double) ((EntityLivingBase) this.m).bf;
+        if (this.l != null && this.l instanceof EntityLivingBase) {
+            d7 = (double) ((EntityLivingBase) this.l).be;
             if (d7 > 0.0D) {
-                d8 = -Math.sin((double) (this.m.z * 3.1415927F / 180.0F));
-                d9 = Math.cos((double) (this.m.z * 3.1415927F / 180.0F));
-                d10 = this.w * this.w + this.y * this.y;
+                d8 = -Math.sin((double) (this.l.y * 3.1415927F / 180.0F));
+                d9 = Math.cos((double) (this.l.y * 3.1415927F / 180.0F));
+                d10 = this.v * this.v + this.x * this.x;
                 if (d10 < 0.01D) {
-                    this.w += d8 * 0.1D;
-                    this.y += d9 * 0.1D;
+                    this.v += d8 * 0.1D;
+                    this.x += d9 * 0.1D;
                     flag1 = false;
                 }
             }
         }
 
         if (flag1) {
-            d7 = Math.sqrt(this.w * this.w + this.y * this.y);
+            d7 = Math.sqrt(this.v * this.v + this.x * this.x);
             if (d7 < 0.03D) {
+                this.v *= 0.0D;
                 this.w *= 0.0D;
                 this.x *= 0.0D;
-                this.y *= 0.0D;
-            }
-            else {
-                this.w *= 0.5D;
-                this.x *= 0.0D;
-                this.y *= 0.5D;
+            } else {
+                this.v *= 0.5D;
+                this.w *= 0.0D;
+                this.x *= 0.5D;
             }
         }
 
@@ -498,25 +486,23 @@ public abstract class EntityMinecart extends Entity {
         double d13;
 
         if (d2 == 0.0D) {
-            this.t = (double) i0 + 0.5D;
-            d7 = this.v - (double) i2;
-        }
-        else if (d3 == 0.0D) {
-            this.v = (double) i2 + 0.5D;
-            d7 = this.t - (double) i0;
-        }
-        else {
-            d12 = this.t - d8;
-            d13 = this.v - d9;
+            this.s = (double) i0 + 0.5D;
+            d7 = this.u - (double) i2;
+        } else if (d3 == 0.0D) {
+            this.u = (double) i2 + 0.5D;
+            d7 = this.s - (double) i0;
+        } else {
+            d12 = this.s - d8;
+            d13 = this.u - d9;
             d7 = (d12 * d2 + d13 * d3) * 2.0D;
         }
 
-        this.t = d8 + d2 * d7;
-        this.v = d9 + d3 * d7;
-        this.b(this.t, this.u + (double) this.M, this.v);
-        d12 = this.w;
-        d13 = this.y;
-        if (this.m != null) {
+        this.s = d8 + d2 * d7;
+        this.u = d9 + d3 * d7;
+        this.b(this.s, this.t + (double) this.L, this.u);
+        d12 = this.v;
+        d13 = this.x;
+        if (this.l != null) {
             d12 *= 0.75D;
             d13 *= 0.75D;
         }
@@ -538,75 +524,69 @@ public abstract class EntityMinecart extends Entity {
         }
 
         this.d(d12, 0.0D, d13);
-        if (aint[0][1] != 0 && MathHelper.c(this.t) - i0 == aint[0][0] && MathHelper.c(this.v) - i2 == aint[0][2]) {
-            this.b(this.t, this.u + (double) aint[0][1], this.v);
-        }
-        else if (aint[1][1] != 0 && MathHelper.c(this.t) - i0 == aint[1][0] && MathHelper.c(this.v) - i2 == aint[1][2]) {
-            this.b(this.t, this.u + (double) aint[1][1], this.v);
+        if (aint[0][1] != 0 && MathHelper.c(this.s) - i0 == aint[0][0] && MathHelper.c(this.u) - i2 == aint[0][2]) {
+            this.b(this.s, this.t + (double) aint[0][1], this.u);
+        } else if (aint[1][1] != 0 && MathHelper.c(this.s) - i0 == aint[1][0] && MathHelper.c(this.u) - i2 == aint[1][2]) {
+            this.b(this.s, this.t + (double) aint[1][1], this.u);
         }
 
         this.i();
-        Vec3 vec31 = this.a(this.t, this.u, this.v);
+        Vec3 vec31 = this.a(this.s, this.t, this.u);
 
         if (vec31 != null && vec3 != null) {
-            double d14 = (vec3.d - vec31.d) * 0.05D;
+            double d14 = (vec3.b - vec31.b) * 0.05D;
 
-            d6 = Math.sqrt(this.w * this.w + this.y * this.y);
+            d6 = Math.sqrt(this.v * this.v + this.x * this.x);
             if (d6 > 0.0D) {
-                this.w = this.w / d6 * (d6 + d14);
-                this.y = this.y / d6 * (d6 + d14);
+                this.v = this.v / d6 * (d6 + d14);
+                this.x = this.x / d6 * (d6 + d14);
             }
 
-            this.b(this.t, vec31.d, this.v);
+            this.b(this.s, vec31.b, this.u);
         }
 
-        int i4 = MathHelper.c(this.t);
-        int i5 = MathHelper.c(this.v);
+        int i4 = MathHelper.c(this.s);
+        int i5 = MathHelper.c(this.u);
 
         if (i4 != i0 || i5 != i2) {
-            d6 = Math.sqrt(this.w * this.w + this.y * this.y);
-            this.w = d6 * (double) (i4 - i0);
-            this.y = d6 * (double) (i5 - i2);
+            d6 = Math.sqrt(this.v * this.v + this.x * this.x);
+            this.v = d6 * (double) (i4 - i0);
+            this.x = d6 * (double) (i5 - i2);
         }
 
         if (flag0) {
-            double d15 = Math.sqrt(this.w * this.w + this.y * this.y);
+            double d15 = Math.sqrt(this.v * this.v + this.x * this.x);
 
             if (d15 > 0.01D) {
                 double d16 = 0.06D;
 
-                this.w += this.w / d15 * d16;
-                this.y += this.y / d15 * d16;
-            }
-            else if (i3 == 1) {
-                if (this.p.a(i0 - 1, i1, i2).r()) {
-                    this.w = 0.02D;
+                this.v += this.v / d15 * d16;
+                this.x += this.x / d15 * d16;
+            } else if (i3 == 1) {
+                if (this.o.a(i0 - 1, i1, i2).r()) {
+                    this.v = 0.02D;
+                } else if (this.o.a(i0 + 1, i1, i2).r()) {
+                    this.v = -0.02D;
                 }
-                else if (this.p.a(i0 + 1, i1, i2).r()) {
-                    this.w = -0.02D;
-                }
-            }
-            else if (i3 == 0) {
-                if (this.p.a(i0, i1, i2 - 1).r()) {
-                    this.y = 0.02D;
-                }
-                else if (this.p.a(i0, i1, i2 + 1).r()) {
-                    this.y = -0.02D;
+            } else if (i3 == 0) {
+                if (this.o.a(i0, i1, i2 - 1).r()) {
+                    this.x = 0.02D;
+                } else if (this.o.a(i0, i1, i2 + 1).r()) {
+                    this.x = -0.02D;
                 }
             }
         }
     }
 
     protected void i() {
-        if (this.m != null) {
-            this.w *= 0.996999979019165D;
-            this.x *= 0.0D;
-            this.y *= 0.996999979019165D;
-        }
-        else {
-            this.w *= 0.9599999785423279D;
-            this.x *= 0.0D;
-            this.y *= 0.9599999785423279D;
+        if (this.l != null) {
+            this.v *= 0.996999979019165D;
+            this.w *= 0.0D;
+            this.x *= 0.996999979019165D;
+        } else {
+            this.v *= 0.9599999785423279D;
+            this.w *= 0.0D;
+            this.x *= 0.9599999785423279D;
         }
     }
 
@@ -615,14 +595,14 @@ public abstract class EntityMinecart extends Entity {
         int i1 = MathHelper.c(d1);
         int i2 = MathHelper.c(d2);
 
-        if (BlockRailBase.b_(this.p, i0, i1 - 1, i2)) {
+        if (BlockRailBase.b_(this.o, i0, i1 - 1, i2)) {
             --i1;
         }
 
-        Block block = this.p.a(i0, i1, i2);
+        Block block = this.o.a(i0, i1, i2);
 
         if (BlockRailBase.a(block)) {
-            int i3 = this.p.e(i0, i1, i2);
+            int i3 = this.o.e(i0, i1, i2);
 
             d1 = (double) i1;
             if (((BlockRailBase) block).e()) {
@@ -648,12 +628,10 @@ public abstract class EntityMinecart extends Entity {
             if (d10 == 0.0D) {
                 d0 = (double) i0 + 0.5D;
                 d3 = d2 - (double) i2;
-            }
-            else if (d12 == 0.0D) {
+            } else if (d12 == 0.0D) {
                 d2 = (double) i2 + 0.5D;
                 d3 = d0 - (double) i0;
-            }
-            else {
+            } else {
                 double d13 = d0 - d4;
                 double d14 = d2 - d6;
 
@@ -671,9 +649,8 @@ public abstract class EntityMinecart extends Entity {
                 d1 += 0.5D;
             }
 
-            return this.p.U().a(d0, d1, d2);
-        }
-        else {
+            return Vec3.a(d0, d1, d2);
+        } else {
             return null;
         }
     }
@@ -703,9 +680,9 @@ public abstract class EntityMinecart extends Entity {
         }
     }
 
-    public void f(Entity entity) {
-        if (!this.p.E) {
-            if (entity != this.m) {
+    public void g(Entity entity) {
+        if (!this.o.E) {
+            if (entity != this.l) {
                 // CanaryMod: VehicleCollision
                 VehicleCollisionHook vch = new VehicleCollisionHook((Vehicle) this.entity, entity.getCanaryEntity());
 
@@ -714,7 +691,7 @@ public abstract class EntityMinecart extends Entity {
                     return;
                 }
                 //
-                if (entity instanceof EntityLivingBase && !(entity instanceof EntityPlayer) && !(entity instanceof EntityIronGolem) && this.m() == 0 && this.w * this.w + this.y * this.y > 0.01D && this.m == null && entity.n == null) {
+                if (entity instanceof EntityLivingBase && !(entity instanceof EntityPlayer) && !(entity instanceof EntityIronGolem) && this.m() == 0 && this.v * this.v + this.x * this.x > 0.01D && this.l == null && entity.m == null) {
                     // CanaryMod: VehicleEnter (Animal/Mob)
                     VehicleEnterHook veh = new VehicleEnterHook((Vehicle) this.entity, (EntityLiving) entity.getCanaryEntity());
 
@@ -725,8 +702,8 @@ public abstract class EntityMinecart extends Entity {
                     //
                 }
 
-                double d0 = entity.t - this.t;
-                double d1 = entity.v - this.v;
+                double d0 = entity.s - this.s;
+                double d1 = entity.u - this.u;
                 double d2 = d0 * d0 + d1 * d1;
 
                 if (d2 >= 9.999999747378752E-5D) {
@@ -743,50 +720,47 @@ public abstract class EntityMinecart extends Entity {
                     d1 *= d3;
                     d0 *= 0.10000000149011612D;
                     d1 *= 0.10000000149011612D;
-                    d0 *= (double) (1.0F - this.Z);
-                    d1 *= (double) (1.0F - this.Z);
+                    d0 *= (double) (1.0F - this.Y);
+                    d1 *= (double) (1.0F - this.Y);
                     d0 *= 0.5D;
                     d1 *= 0.5D;
                     if (entity instanceof EntityMinecart) {
-                        double d4 = entity.t - this.t;
-                        double d5 = entity.v - this.v;
-                        Vec3 vec3 = this.p.U().a(d4, 0.0D, d5).a();
-                        Vec3 vec31 = this.p.U().a((double) MathHelper.b(this.z * 3.1415927F / 180.0F), 0.0D, (double) MathHelper.a(this.z * 3.1415927F / 180.0F)).a();
+                        double d4 = entity.s - this.s;
+                        double d5 = entity.u - this.u;
+                        Vec3 vec3 = Vec3.a(d4, 0.0D, d5).a();
+                        Vec3 vec31 = Vec3.a((double) MathHelper.b(this.y * 3.1415927F / 180.0F), 0.0D, (double) MathHelper.a(this.y * 3.1415927F / 180.0F)).a();
                         double d6 = Math.abs(vec3.b(vec31));
 
                         if (d6 < 0.800000011920929D) {
                             return;
                         }
 
-                        double d7 = entity.w + this.w;
-                        double d8 = entity.y + this.y;
+                        double d7 = entity.v + this.v;
+                        double d8 = entity.x + this.x;
 
                         if (((EntityMinecart) entity).m() == 2 && this.m() != 2) {
-                            this.w *= 0.20000000298023224D;
-                            this.y *= 0.20000000298023224D;
-                            this.g(entity.w - d0, 0.0D, entity.y - d1);
-                            entity.w *= 0.949999988079071D;
-                            entity.y *= 0.949999988079071D;
-                        }
-                        else if (((EntityMinecart) entity).m() != 2 && this.m() == 2) {
-                            entity.w *= 0.20000000298023224D;
-                            entity.y *= 0.20000000298023224D;
-                            entity.g(this.w + d0, 0.0D, this.y + d1);
-                            this.w *= 0.949999988079071D;
-                            this.y *= 0.949999988079071D;
-                        }
-                        else {
+                            this.v *= 0.20000000298023224D;
+                            this.x *= 0.20000000298023224D;
+                            this.g(entity.v - d0, 0.0D, entity.x - d1);
+                            entity.v *= 0.949999988079071D;
+                            entity.x *= 0.949999988079071D;
+                        } else if (((EntityMinecart) entity).m() != 2 && this.m() == 2) {
+                            entity.v *= 0.20000000298023224D;
+                            entity.x *= 0.20000000298023224D;
+                            entity.g(this.v + d0, 0.0D, this.x + d1);
+                            this.v *= 0.949999988079071D;
+                            this.x *= 0.949999988079071D;
+                        } else {
                             d7 /= 2.0D;
                             d8 /= 2.0D;
-                            this.w *= 0.20000000298023224D;
-                            this.y *= 0.20000000298023224D;
+                            this.v *= 0.20000000298023224D;
+                            this.x *= 0.20000000298023224D;
                             this.g(d7 - d0, 0.0D, d8 - d1);
-                            entity.w *= 0.20000000298023224D;
-                            entity.y *= 0.20000000298023224D;
+                            entity.v *= 0.20000000298023224D;
+                            entity.x *= 0.20000000298023224D;
                             entity.g(d7 + d0, 0.0D, d8 + d1);
                         }
-                    }
-                    else {
+                    } else {
                         this.g(-d0, 0.0D, -d1);
                         entity.g(d0 / 4.0D, 0.0D, d1 / 4.0D);
                     }
@@ -796,27 +770,27 @@ public abstract class EntityMinecart extends Entity {
     }
 
     public void a(float f0) {
-        this.ag.b(19, Float.valueOf(f0));
+        this.af.b(19, Float.valueOf(f0));
     }
 
     public float j() {
-        return this.ag.d(19);
+        return this.af.d(19);
     }
 
     public void c(int i0) {
-        this.ag.b(17, Integer.valueOf(i0));
+        this.af.b(17, Integer.valueOf(i0));
     }
 
     public int k() {
-        return this.ag.c(17);
+        return this.af.c(17);
     }
 
     public void j(int i0) {
-        this.ag.b(18, Integer.valueOf(i0));
+        this.af.b(18, Integer.valueOf(i0));
     }
 
     public int l() {
-        return this.ag.c(18);
+        return this.af.c(18);
     }
 
     public abstract int m();
@@ -824,8 +798,7 @@ public abstract class EntityMinecart extends Entity {
     public Block n() {
         if (!this.t()) {
             return this.o();
-        }
-        else {
+        } else {
             int i0 = this.z().c(20) & '\uffff';
 
             return Block.e(i0);
